RESOLVED FIXED284021
REGRESSION(287315@main): css-rhythm/parsing/block-step-computed crashing with ASSERT_NOT_IMPLEMENTED_YET
https://bugs.webkit.org/show_bug.cgi?id=284021
Summary REGRESSION(287315@main): css-rhythm/parsing/block-step-computed crashing with...
Sammy Gill
Reported 2024-12-03 21:33:01 PST
RenderBlockFlow::performBlockStepSizing is crashing with ASSERT_NOT_IMPLEMENTED after 287315@main. We added ASSERT_NOT_IMPLEMENTED_YET for unsupported content but failed to guard the call on performBlockStepSizing on supported content
Attachments
Radar WebKit Bug Importer
Comment 1 2024-12-03 21:33:27 PST
Sammy Gill
Comment 2 2024-12-03 21:41:53 PST
EWS
Comment 3 2024-12-04 09:46:29 PST
Committed 287347@main (4288ded87448): <https://commits.webkit.org/287347@main> Reviewed commits have been landed. Closing PR #37409 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.